<resources>
    <string name="app_name">Foot Battery</string>
    <string name="preset_barefoot">Barefoot</string>
    <string name="preset_running">Running</string>
    <string name="preset_dress">Dress</string>
    <string name="preset_boots">Boots</string>
    <string name="ankle_preset_artwork">Selected footwear preset</string>
    <string name="automatic_alignment">Automatic alignment</string>
    <string name="automatic_alignment_instruction">Keep foot flat until the second beep, then lift your foot.</string>
</resources>
